--- a/index.html
+++ b/index.html
@@ -1,26 +1,10 @@
-<!-- <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my portfolio</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
-</html> -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <!-- Try this more compatible version -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+    
 
     <meta name="description" content="my portfolio" />
     <title>Dev Hammed</title>
@@ -29,7 +13,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="src/" />
+  
     <link rel="stylesheet" href="src/style.css" />
 
     <link rel="icon" href="public/img/dev.jpg" />
@@ -73,7 +57,11 @@
           </div>
         </div>
         <div class="hero-image">
-          <img src="img/my-pichero.jpg" alt="Profile" class="profile-img" />
+          <img
+            src="public/img/my-pichero.jpg"
+            alt="Profile"
+            class="profile-img"
+          />
         </div>
       </div>
     </section>
