--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-    
 
     <meta name="description" content="my portfolio" />
     <title>Dev Hammed</title>
@@ -13,7 +11,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
 
-  
     <link rel="stylesheet" href="src/style.css" />
 
     <link rel="icon" href="public/img/dev.jpg" />
@@ -110,7 +107,11 @@
         </div>
         <div class="portfolio-grid">
           <div class="portfolio-item">
-            <!-- <img src="img/what port.jpg" alt="Project" class="portfolio-img" /> -->
+            <img
+              src="public/img/Screenshot pedr t.png"
+              alt="Project"
+              class="portfolio-img"
+            />
             <div class="portfolio-info">
               <h3>Pedro gadget</h3>
               <p>
@@ -129,16 +130,18 @@
           </div>
 
           <div class="portfolio-item">
-            <!-- <img
-              src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1760&q=80"
+            <img
+              src="public/img/Screenshot utra pt.png"
               alt="Project"
               class="portfolio-img"
-            /> -->
+            />
             <div class="portfolio-info">
               <h3>ultra-properties</h3>
               <p>
-                Mobile-first travel booking platform with integrated payment
-                system and location services.
+                <!-- Mobile-first travel booking platform with integrated payment
+                system and location services. -->
+                Real estate website clean and responsiveto all mobile screens
+                with a real time location search
               </p>
               <div class="portfolio-tags">
                 <span class="tag">HTML</span>
@@ -152,11 +155,10 @@
           </div>
 
           <div class="portfolio-item">
-            <!-- <img
-              src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80"
-              alt="Project"
+            <img
+              src="public/img/Screenshot omin pt.png"
               class="portfolio-img"
-            /> -->
+            />
             <div class="portfolio-info">
               <h3>omini-food website</h3>
               <p>
